# metrima

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
backup/: fx_inplace.py
docs/source/: conf.py  index.rst
metrima/: __init__.py  center_text.py  constant.py  constants.py  custerror.py  decorators.py  errors.py  fx.py  lib.py  main.py  tests.py  timeunits.py
metrima/core/: __init__.py  constant.py  fixed.py  fx.py  temporary.py
metrima/math/: __init__.py  constants.py  main.py
metrima/units/: __init__.py  time.py  utils.py  weight.py
metrima/utils/: __init__.py  center_text.py  decorators.py  errors.py  exists.py
