[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrima"
version = "0.3.2"
description = "Just another (cool) no-deps math library"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Razka Rizaldi", email = "razka.rizaldis@gmail.com"},
    {name = "tyydev1", email = "torchist@proton.me"}
]
keywords = ["math", "mathematics", "library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tinycolors>=0.5.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
metrimatest = "metrima.tests:menu"

[project.urls]
Homepage = "https://github.com/tyydev1/metrima"
Repository = "https://github.com/tyydev1/metrima"
Issues = "https://github.com/tyydev1/metrima/issues"

[tool.setuptools]
packages = ["metrima"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false