[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrima"
version = "0.3.5.2"
description = "Just another (cool) no-deps math library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Razka Rizaldi", email = "razka.rizaldis@gmail.com" },
    { name = "tyydev1", email = "torchist@proton.me" },
]
keywords = ["math", "mathematics", "library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["tinycolors==0.6.1", "typing-extensions>=4.15.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "sphinx>=8.1.3",
    "furo>=2025.9.25",
    "sphinx-autoapi>=3.6.1",
]

[project.scripts]
metrimatest = "metrima.tests:menu"

[project.urls]
Homepage = "https://github.com/tyydev1/metrima"
Repository = "https://github.com/tyydev1/metrima"
Issues = "https://github.com/tyydev1/metrima/issues"

[tool.setuptools]
packages = [
    "metrima",
    "metrima.core",
    "metrima.utils",
    "metrima.units",
    "metrima.math",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
